Moved out text from header and index page to index.html.

--- a/content/index.html
+++ b/content/index.html
@@ -1,11 +1,15 @@
 ---
 layout: default
+navigation:
+    brand: BRAND
+sections:
+- name: Services
+- name: Portfolio
+- name: About
+- name: Team
+- name: Contact
+header:
+    welcome: Welcome To Our Studio!
+    nice: It's Nice To Meet You
+    button: Tell me more
 ---
-
-
-
-
-
-
-
-
