Moved out text and images from services.html, portfolio.html to index.html.

--- a/content/index.html
+++ b/content/index.html
@@ -12,4 +12,44 @@ header:
     welcome: Welcome To Our Studio!
     nice: It's Nice To Meet You
     button: Tell me more
+services:
+    heading: Services
+    subheadingtext: Lorem ipsum dolor sit amet consectetur.
+    heading1: E-Commerce
+    text1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+    heading2: Responsive Design
+    text2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+    heading3: Web Security
+    text3: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
+portfolio:
+    heading: Portfolio
+    subheadingtext: Lorem ipsum dolor sit amet consectetur.
+    projects:
+        - image: roundicons.png
+          title: Round Icons
+          text: Graphics Design
+          modal: #portfolioModal1
+        - image: startup-framework.png
+          title: Startup Framework
+          text: Website Design
+          modal: #portfolioModal2
+        - image: treehouse.png
+          title: Treehouse
+          text: Website Design
+          modal: #portfolioModal3
+        - image: golden.png
+          title: golden.png
+          text: Website Design
+          modal: #portfolioModal4
+        - image: escape.png
+          title: Escape
+          text: Website Design
+          modal: #portfolioModal5
+        - image: dreams.png
+          title: Dreams
+          text: Website Design
+          modal: #portfolioModal6
+
+
+
 ---
