Fix page scrolling javascript, add missing text sample for e-commerce service, configure the page title to be the same as a brand name. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/content/index.html
+++ b/content/index.html
@@ -3,11 +3,11 @@ layout: default
 navigation:
     brand: BRAND
 sections:
-- name: Services
-- name: Portfolio
-- name: About
-- name: Team
-- name: Contact
+    - name: Services
+    - name: Portfolio
+    - name: About
+    - name: Team
+    - name: Contact
 header:
     welcome: Welcome To Our Studio!
     nice: It's Nice To Meet You
@@ -16,6 +16,7 @@ services:
     heading: Services
     subheadingtext: Lorem ipsum dolor sit amet consectetur.
     heading1: E-Commerce
+    text1: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
     heading2: Responsive Design
     text2: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.
     heading3: Web Security
@@ -90,4 +91,4 @@ portfolio:
           link: http://roundicons.com
           title: Dreams
           description: is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.
-          ---
+---
