Put all text from the about.html include to the index.html file. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/content/index.html
+++ b/content/index.html
@@ -91,4 +91,24 @@ portfolio:
           link: http://roundicons.com
           title: Dreams
           description: is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.
+about:
+    heading: About
+    subheadingtext: Lorem ipsum dolor sit amet consectetur.
+    events:
+        - image: 1.jpg
+          title: Our Humble Beginnings
+          date: 2009-2011
+          text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+        - image: 2.jpg
+          title: An Agency is Born
+          date: March 2011
+          text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+        - image: 3.jpg
+          title: Transition to Full Service
+          date: December 2012
+          text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
+        - image: 4.jpg
+          title: Phase Two Expansion
+          date: July 2014
+          text: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!
 ---
