Set the theme title to Agency Theme. Signed-off-by: Dmitriy Pavlenko <dmitriy.pavlenko@sysgears.com>

--- a/content/index.html
+++ b/content/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Brand name
+title: Agency Theme
 navigation:
-    brand: BRAND
+    brand: Agency Theme
 sections:
     - name: Services
     - name: Portfolio
@@ -10,8 +10,8 @@ sections:
     - name: Team
     - name: Contact
 header:
-    welcome: Welcome To Our Studio!
-    nice: It's Nice To Meet You
+    line1: Welcome To Our Studio!
+    line2: It's Nice To Meet You
     button: Tell me more
 services:
     heading: Services
